--- a/index.html
+++ b/index.html
@@ -50,15 +50,26 @@
     </div>
     <form class="bg-dark">
         <p>Filter Search</p>
-        <ul class="bg-dark list-group">
-            <li class="bg-dark list-group-item">
+        <ul class="bg-dark">
+            <li class="bg-dark">
                 <label for="date">Enter Date</label>
                 <input type="text" placeholder="1/10/2010" id="datetime" />
             </li>
-            <li class="bg-dark list-group-item">
-                <button id="filter-btn" type="button" class="btn-dark">
-                    Filter Table
-                </button>
+            <li class="bg-dark">
+                <label for="city">Enter a City</label>
+                <input type="text" placeholder="Norton" id="city" />
+            </li>
+            <li class="bg-dark">
+                <label for="state">Enter a State</label>
+                <input type="text" placeholder="MA" id="state" />
+            </li>
+            <li class="bg-dark">
+                <label for="country">Enter a Country</label>
+                <input type="text" placeholder="US" id="country" />
+            </li>
+            <li class="bg-dark">
+                <label for="shape">Enter a Shape</label>
+                <input type="text" placeholder="triangle" id="shape" />
             </li>
         </ul>
     </form>
@@ -78,5 +89,8 @@
                 <tbody></tbody>
             </table>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+        <script src="static/js/data.js"></script>
+        <script src="static/js/app.js"></script>
 </body>
 </html>
